@@ -1,6 +1,6 @@
 <!--
    This file contains a listing of public holidays in Italy
-   for the year 2002.
+   for the year 2002-2020.
 -->
 
 <events>
@@ -12,9 +12,45 @@
   </event> 
   <event name="Easter" type="public_holiday">
      <date day="31" month="3" year="2002"/>
+    <date day="20" month="4" year="2003"></date>
+    <date day="11" month="4" year="2004"></date>
+    <date day="27" month="3" year="2005"></date>
+    <date day="16" month="4" year="2006"></date>
+    <date day="8" month="4" year="2007"></date>
+    <date day="23" month="3" year="2008"></date>
+    <date day="12" month="4" year="2009"></date>
+    <date day="4" month="4" year="2010"></date>
+    <date day="24" month="4" year="2011"></date>
+    <date day="8" month="4" year="2012"></date>
+    <date day="31" month="3" year="2013"></date>
+    <date day="20" month="4" year="2014"></date>
+    <date day="5" month="4" year="2015"></date>
+    <date day="27" month="3" year="2016"></date>
+    <date day="16" month="4" year="2017"></date>
+    <date day="1" month="4" year="2018"></date>
+    <date day="21" month="4" year="2019"></date>
+    <date day="12" month="4" year="2020"></date>
   </event>
   <event name="Easter Monday" type="public_holiday">
      <date day="1" month="4" year="2002"/>
+    <date day="21" month="4" year="2003"></date>
+    <date day="12" month="4" year="2004"></date>
+    <date day="28" month="3" year="2005"></date>
+    <date day="17" month="4" year="2006"></date>
+    <date day="9" month="4" year="2007"></date>
+    <date day="24" month="3" year="2008"></date>
+    <date day="13" month="4" year="2009"></date>
+    <date day="5" month="4" year="2010"></date>
+    <date day="25" month="4" year="2011"></date>
+    <date day="9" month="4" year="2012"></date>
+    <date day="1" month="4" year="2013"></date>
+    <date day="21" month="4" year="2014"></date>
+    <date day="6" month="4" year="2015"></date>
+    <date day="28" month="3" year="2016"></date>
+    <date day="17" month="4" year="2017"></date>
+    <date day="2" month="4" year="2018"></date>
+    <date day="22" month="4" year="2019"></date>
+    <date day="13" month="4" year="2020"></date>
   </event>
   <event name="Liberation Day" type="public_holiday">
      <date day="25" month="4"/>
